[project]
name = "app"
version = "0.1.0"
description = "Image Generation Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.1",
    "diffusers>=0.34.0",
    "fastapi>=0.116.0",
    "optimum-quanto>=0.2.7",
    "protobuf>=6.31.1",
    "pydantic-settings>=2.10.1",
    "sentencepiece>=0.2.0",
    "transformers>=4.53.1",
    "uvicorn>=0.34.3",
]
