[project]
name = "app"
version = "0.1.0"
description = "Image Generation Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.1",
    "diffusers>=0.34.0",
    "fastapi>=0.116.0",
    "optimum-quanto>=0.2.7",
    "protobuf>=6.31.1",
    "pydantic-settings>=2.10.1",
    "sentencepiece>=0.2.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.53.1",
    "uvicorn>=0.34.3",
]

# Use cuda builds on linux and windows, fall back to CPU buils on MacOS (still with MPS support)
# See the following for adapting for other platforms:
# https://pytorch.org/get-started/locally/ 
# https://docs.astral.sh/uv/guides/integration/pytorch/#using-a-pytorch-index
[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true